--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "project-10b",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://muhamadilhammubarrok.github.io/landingpage-10b",
   "type": "module",
   "scripts": {
     "dev": "vite",
